# opengl-engine-c-

./: .anjuta_sym_db.db  Makefile.in  README.md  aclocal.m4  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.status
Debug/po/: Makefile.in  POTFILES
Debug/src/: Makefile  basic.frag  basic.vert  sparky_engine
Debug/src/.deps/: main.Po  mat4.Po  vec2.Po  window.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  basic.frag~  basic.vert~  fileutils.h  fileutils.h~  input.cpp  input.cpp~  input.h  input.h~  main.cc  main.cc~  mat4.cpp  mat4.cpp~  mat4.h  mat4.h~  math.h  math.h~  shader.cpp  shader.cpp~  shader.h  shader.h~  vec2.cpp  vec2.cpp~  vec2.h  vec2.h~  vec3.cpp  vec3.cpp~  vec3.h  vec3.h~  vec4.cpp  vec4.cpp~  vec4.h  vec4.h~  window.cc  window.cc~  window.h  window.h~
